[package]
name = "rust-edit"
version = "0.1.0"
edition = "2024"
authors = ["ReeZey", "VilleOlof"]

[dependencies]
simdnbt = { version = "0.7.1", git = "https://github.com/azalea-rs/simdnbt", rev = "4787a8f5326e7f4a20263873310f0893a59e33ba" }
mca = "1.1.0"
thiserror = "2"
flate2 = "1.1.2"
rayon = "1.10"
fixedbitset = "0.5.7"

[features]
spigot = []

[profile.speed]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
