[package]
name = "rust-edit"
description = "Easily edit Minecraft worlds with a simple, fast and powerful API"
license = "MIT"
version = "0.1.0"
edition = "2024"
authors = ["ReeZey", "VilleOlof"]
repository = "https://github.com/VilleOlof/rust-edit"

[dependencies]
simdnbt = { version = "0.7.1", git = "https://github.com/azalea-rs/simdnbt", rev = "4787a8f5326e7f4a20263873310f0893a59e33ba" }
mca = "1.1.0"
thiserror = "2"
fixedbitset = "0.5.7"
