[package]
name = "rust-edit"
description = "Easily edit Minecraft worlds with a simple, fast and powerful API"
version = "0.1.0"
edition = "2024"
authors = ["ReeZey", "VilleOlof"]
categories = ["parser-implementations", "game-development"]
keywords = ["minecraft", "nbt", "chunk", "edit", "block"]
readme = "readme.md"
license = "MIT"
repository = "https://github.com/VilleOlof/rust-edit"

[dependencies]
simdnbt = { version = "0.7.1", git = "https://github.com/azalea-rs/simdnbt", rev = "4787a8f5326e7f4a20263873310f0893a59e33ba" }
mca = "1.1"
thiserror = "2"
fixedbitset = "0.5"
ahash = "0.8"

[lib]
doctest = false

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "full_region_set_block"
harness = false

[profile.profiling]
inherits = "release"
debug = true

[workspace]
members = ["examples/*"]
